[project]
name = "langgraph-ephemeral-checkpointer"
version = "0.0.1"
description = "TTL-based thread retention for LangGraph checkpointers"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "35C4n0r"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.0",
    "langgraph-checkpoint>=3.0.0",
]

[project.optional-dependencies]
sqlite = ["langgraph-checkpoint-sqlite>=3.1.0"]
postgres = ["langgraph-checkpoint-postgres>=3.1.0"]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "aiosqlite>=0.20",
]
benchmark = [
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
exclude = ["benchmarks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
    "E501",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
]
project-excludes = [
    "benchmarks/**",
]
search-path = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
